<resources>
    <string name="app_name">CaidasGye</string>
    <string name="Habitacion">Habitación: </string>
    <string name="Nombres">Nombres: </string>
    <string name="IdPulsera">Identificador de la pulsera: </string>
    <string name="Paciente">Paciente: </string>
    <string name="Numero_caida">Número de caída: </string>
    <string name="Tipo_caida">Tipo de caída: </string>
    <string name="FechaHora">Fecha Hora: </string>
    <string name="Nombre">Nombre: </string>
    <string name="Apellido">Apellido: </string>
    <string name="Cedula">Cédula: </string>
    <string name="Sexo">Sexo: </string>
    <string name="Enlazar">Enlazar</string>
    <string name="GraficoTiposCaidas">Gráfico de tipos caídas</string>
    <string name="Nombre_contacto">Nombre de contacto: </string>
    <string name="Celular_contacto">Nombre de contacto: </string>
    <string name="textview">TextView</string>
    <string name="gps_network_not_enabled">El GPS no está habilitado, por favor habilitar el GPS.</string>
    <string name="open_location_settings">Activar GPS</string>
    <string name="Cancel">Cancelar</string>

    <array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
    </array>

    <array name="habitaciones">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>

    </array>
    <array name="tipoReporte">
        <item>"Gráfico"</item>
        <item>"Histórico"</item>
    </array>

    <array name="roles">
        <item>"Admin"</item>
        <item>"Enfermero"</item>
        <item>"Familiar"</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="no_tienes_una_cuenta_inicia_sesi_n">¿No tienes una cuenta? Registrate</string>
</resources>
