<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:gravity="center"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Enlazador">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:text="@string/IdPulsera" />

    <Spinner
        android:id="@+id/spinnerPulseras"
        android:layout_width="match_parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Subtitle"

        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:text="@string/Paciente" />

    <Spinner
        android:id="@+id/spinnerPacientes"
        android:layout_width="match_parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonEnlazador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:text="@string/Enlazar" />
</LinearLayout>